Refined Dark Mode

--- a/choose_campaign.html
+++ b/choose_campaign.html
@@ -144,20 +144,18 @@
                         <span class="bene-light-header">Amazon Forest Fires</span>
                     </div>
 
-                    <br>
+                    <br><br>
 
                     <div>
                         <span class="bene-caps-small">CAMPAIGN BACKGROUND IMAGE</span><br>
                     </div>
                     <div>
                         <div class="campaign-upload-image">
-                            <!-- <div>
-                                            <a class="hyperlink-button-primary" href="">Upload Image </a><a class="hyperlink-button-secondary" href=""> Remove</a>
-                                        </div> -->
+                            <img src="Assets/amazon-brazil-fire.jpg">
                         </div>
                     </div>
 
-                    <br><br>
+                    <br><br><br>
 
                     <div>
                         <span class="bene-caps-small">CAMPAIGN DESCRIPTION</span><br>
@@ -168,49 +166,109 @@
                             despite the President’s ban on deliberate burning.</span>
                     </div>
 
-                    <br><br>
+                    <br><br><br>
 
                     <div>
-                        <span class="bene-caps-small">WIDGET TITLE</span><br>
+                        <span class="bene-caps-small">THE SITUATION</span><br>
                     </div>
 
                     <div>
-                        <span class="bene-body-subtitle">When Jair Bolsonaro – a climate change sceptic - got elected as
+                        <span class="bene-body-subtitle">- When Jair Bolsonaro – a climate change sceptic - got elected
+                            as
                             Brazil’s President, he promised to roll back environmental and indigenous protections and
                             open the Amazon rainforest to industry to boost the economy.
 
                             <br><br>
 
-                            74,000 fires have been recorded this year in the rainforest, threatening its future, the
+                            - 74,000 fires have been recorded this year in the rainforest, threatening its future, the
                             billions of plants and animals, and possibly the entire planet’s health.
 
                             <br><br>
 
-                            20% of the world’s oxygen is produced by the Amazon. If more of the Amazon is destroyed, it
+                            - 20% of the world’s oxygen is produced by the Amazon. If more of the Amazon is destroyed,
+                            it
                             would not only stop producing this oxygen and supporting this wildlife, but it would create
                             a feedback loop worsening climate change.</span>
+                    </div>
+
+                    <br><br><br>
+
+                    <div>
+                        <span class="bene-caps-small">NON PROFIT'S DESCRIPTION</span><br>
+                    </div>
+
+                    <div>
+                        <span class="bene-body-subtitle">The Rainforest Foundation, founded in 1987 is one of the first
+                            international organizations to support indigenous people - those intimately connected to
+                            their ancestral lands– to protect the rainforests.
+
+                        </span>
+                    </div>
+
+                    <br><br><br>
+
+                    <div>
+                        <span class="bene-caps-small">NON PROFIT'S PLAN</span><br>
+                    </div>
+
+                    <div>
+                        <span class="bene-body-subtitle">Your donations will support one of the following actions in
+                            Brazil:
+
+                            <br><br>
+
+                            - Support environmental defenders who are under under attack by a wave of gold miners that
+                            have entered their territory and set up illegal mines that contaminate their water and
+                            destroy their forest.
+
+                            <br><br>
+
+                            - Carry out a large-scale reforestation effort on degraded lands. Replanting trees ensures
+                            forests remain humid, which in turn acts as a natural barrier against new forest fires.
+
+                            <br><br>
+
+                            - Train indigenous forest monitors to analyze satellite data to identify deforestation on
+                            their territories, investigate the deforestation at the community level and then take action
+                            is an effective way to stop illegal deforestation.
+
+
+                        </span>
+                    </div>
+
+                    <br><br><br>
+
+                    <div>
+                        <span class="bene-caps-small">SHOW WIDGET STATEMENT</span><br>
+                    </div>
+
+                    <div>
+                        <span class="bene-body-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+                        </span>
+                    </div>
+
+                    <br><br><br>
+
+                    <div>
+                        <span class="bene-caps-small">INFO BOX DESCRIPTION</span><br>
+                    </div>
+
+                    <div>
+                        <span class="bene-body-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit
+
+                        </span>
                     </div>
 
                     <br><br>
 
 
 
-                    <div>
-                        <span class="bene-caps-small">TOTAL CONTRIBUTED</span><br>
-                    </div>
 
-                    <div>
-                        <div>
-                            <span>
-                                $
-                            </span>
-                            <span class="bene-light-header">
-                                6,420
-                            </span>
-                        </div>
-                    </div>
+                </div>
 
-
+                <div>
+                    <input id="editButton" class="inputbutton" type="button" value="JOIN CAMPAIGN" />
                 </div>
 
 
