--- a/transfer_donations.html
+++ b/transfer_donations.html
@@ -140,7 +140,18 @@
                         <span class="bene-light-header">Choose your platform</span>
                         <br><br>
 
-                    </div> <br><br>
+                    </div>
+
+                    <div>
+                        <span>
+                            $
+                        </span>
+                        <span class="bene-light-header">
+                            6,420
+                        </span>
+                    </div>
+
+                    <br><br>
 
                 </div>
                 <div>
