Added Tab View in Choose Campaigns

--- a/choose_campaign.html
+++ b/choose_campaign.html
@@ -194,6 +194,24 @@
                     <br><br><br>
 
                     <div>
+                        <span class="bene-caps-small">NON PROFITS</span><br>
+                    </div>
+
+                    <div class="tabview">
+                        <div class="tab">
+                            <img src="Assets/rainforest-foundation-us.png">
+                            <span class="bene-body-title">Rainforest Foundation US</span>
+                        </div>
+                        <div class="tab">
+                            <img src="Assets/rainforest-trust.png">
+                            <span class="bene-body-title">Rainforest Trust</span>
+                        </div>
+
+                    </div>
+
+                    <br><br><br>
+
+                    <div>
                         <span class="bene-caps-small">NON PROFIT'S DESCRIPTION</span><br>
                     </div>
 
