Added Tab view on integrations

--- a/integrations_page.html
+++ b/integrations_page.html
@@ -134,13 +134,31 @@
             </div>
             <div class="workspacecontent">
 
-                <div class="accountinfo">
+                <div class="integrations">
 
                     <div>
                         <span class="bene-light-header">Choose your platform</span>
-                        <br><br>
+                    </div>
 
-                    </div> <br><br>
+                    <div class="tabview">
+                        <div class="tab">
+                            <img src="Assets/shopify.png">
+                            <span class="bene-body-title">Shopify</span>
+                        </div>
+                        <div class="tab">
+                            <img src="Assets/magento.png">
+                            <span class="bene-body-title">Magento</span>
+                        </div>
+                        <div class="tab">
+                            <img src="Assets/woocommerce.png">
+                            <span class="bene-body-title">Woo Commerce</span>
+                        </div>
+                        <div class="tab">
+                            <img src="Assets/integrations_icon.png" height="20px">
+                            <span class="bene-body-title">Custom</span>
+                        </div>
+
+                    </div>
 
                 </div>
                 <div>
