Updated Dark Mode + Fixed links + Fixed colors

--- a/current_campaign.html
+++ b/current_campaign.html
@@ -25,8 +25,8 @@
 
             <a href="home_page.html">Home</a>
             <a href="profile_page.html">Profile</a>
-            <a href="tranactions_page.html">Integrations</a>
-            <a class="navbarselected" href="campaigns_page.html">Current Campaign</a>
+            <a href="integrations_page.html">Integrations</a>
+            <a class="navbarselected" href="current_campaign.html">Current Campaign</a>
             <a href="past_campaigns.html">Past Campaigns</a>
             <a href="contribution_log.html">Contribution Log</a>
             <a href="transfer_donations.html">Transfer Donations</a>
