--- a/help_page.html
+++ b/help_page.html
@@ -66,8 +66,11 @@
 
             <a href="home_page.html">Home</a>
             <a href="profile_page.html">Profile</a>
-            <a href="tranactions_page.html">Transactions</a>
-            <a href="campaigns_page.html">Campaigns</a>
+            <a href="integrations_page.html">Integrations</a>
+            <a href="current_campaign.html">Current Campaign</a>
+            <a href="past_campaigns.html">Past Campaigns</a>
+            <a href="contribution_log.html">Contribution Log</a>
+            <a href="transfer_donations.html">Transfer Donations</a>
             <div class="navfooter">
                 <a class="navbarselected" href="help_page.html">Help</a>
                 <a id="ared" href="#">Logout</a>
