--- a/home_page.html
+++ b/home_page.html
@@ -25,7 +25,7 @@
 
             <a class="navbarselected" href="home_page.html">Home</a>
             <a href="profile_page.html">Profile</a>
-            <a href="tranactions_page.html">Integrations</a>
+            <a href="integrations_page.html">Integrations</a>
             <a href="current_campaign.html">Current Campaign</a>
             <a href="past_campaigns.html">Past Campaigns</a>
             <a href="contribution_log.html">Contribution Log</a>
