--- a/transfer_donations.html
+++ b/transfer_donations.html
@@ -134,10 +134,10 @@
             </div>
             <div class="workspacecontent">
 
-                <div class="accountinfo">
+                <div class="transfer-donations">
 
                     <div>
-                        <span class="bene-light-header">Choose your platform</span>
+                        <span class="bene-light-header">Pending Amount</span>
                         <br><br>
 
                     </div>
@@ -147,7 +147,7 @@
                             $
                         </span>
                         <span class="bene-light-header">
-                            6,420
+                            <b>6,420</b>
                         </span>
                     </div>
 
