--- a/contribution_log.html
+++ b/contribution_log.html
@@ -27,7 +27,7 @@
             <a href="home_page.html">Home</a>
             <a href="profile_page.html">Profile</a>
             <a href="integrations_page.html">Integrations</a>
-            <a href="campaigns_page.html">Current Campaign</a>
+            <a href="current_campaign.html">Current Campaign</a>
             <a href="past_campaigns.html">Past Campaigns</a>
             <a class="navbarselected" href="contribution_log.html">Contribution Log</a>
             <a href="transfer_donations.html">Transfer Donations</a>
