--- a/profile_page.html
+++ b/profile_page.html
@@ -120,10 +120,10 @@
             <a href="home_page.html">Home</a>
             <a class="navbarselected" href="profile_page.html">Profile</a>
             <a href="integrations_page.html">Integrations</a>
-            <a href="campaigns_page.html">Current Campaign</a>
-            <a href="campaigns_page.html">Past Campaigns</a>
-            <a href="campaigns_page.html">Contribution Log</a>
-            <a href="campaigns_page.html">Tramsfer Donations</a>
+            <a href="current_campaign.html">Current Campaign</a>
+            <a href="past_campaigns.html">Past Campaigns</a>
+            <a href="contribution_log.html">Contribution Log</a>
+            <a href="transfer_donations.html">Transfer Donations</a>
             <div class="navfooter">
                 <a href="help_page.html">Help</a>
                 <a id="ared" href="#">Logout</a>
