Added header svg + more new stuff

--- a/choose_campaign.html
+++ b/choose_campaign.html
@@ -20,97 +20,7 @@
 </head>
 
 <body class="preload">
-    <div class="modal w3-animate-opacity" id="editModal">
-        <div class="modalbox w3-container w3-center w3-animate-top">
 
-            <!-- w3-container w3-center w3-animate-top -->
-
-            <div class="modal-title">
-                <span>Edit Account Info</span>
-                <div class="modal-button">
-                    <input id="edit-modal-close" class="inputbutton-tertiary" type="button" value="Cancel" />
-                    <input id="edit-modal-close" class="inputbutton-small" type="button" value="Done" />
-                </div>
-            </div>
-            <div class="modalcontent">
-
-                <div class="modal-input-1">
-                    <div>
-                        <label>LOGO</label><br>
-                        <div class="profile-upload-image">
-
-                        </div><br><br>
-                        <input class="inputbutton-small" type="button" value="Upload Logo" /><br><br>
-                    </div>
-                    <div>
-
-                    </div>
-                    <div>
-                        <label>FIRST NAME</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-                    <div>
-                        <label>FIRST NAME</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-                    <div>
-                        <label>MOBILE NO.</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-                    <div>
-                        <label>COUNTRY</label><br>
-                        <select>
-                            <option>INDIA</option>
-                            <option>USA</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="modal-input-2">
-                    <div>
-                        <label>ORGANIZATION NAME</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-                    <div>
-                        <label>ORGANIZATION ADDRESS</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-                    <div>
-                        <label>ORGANIZATION WEBSITE</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-                    <div>
-                        <label>INTRODUCTION</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-                    <div>
-                        <label>CATEGORY</label><br>
-                        <select>
-                            <option>INDIA</option>
-                            <option>USA</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="modal-input-2">
-                    <div>
-                        <label>E-MAIL</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-                    <div>
-                        <label>PASSWORD</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-                    <div>
-                        <label>CONFIRM PASSWORD</label><br>
-                        <input class="inputtext" type="text" class="form-control" placeholder="" name="First_Name">
-                    </div>
-
-                </div>
-                <br><br><br><br><br>
-
-            </div>
-
-        </div>
-    </div>
     <div class="wrapper">
         <div id="navBar" class="navbar">
             <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
@@ -132,7 +42,7 @@
         <div class="workspace">
             <div class="header">
                 <img class="ham_menu" id="hamMenu" onclick="openNav()" src="Assets/ham_menu.svg" height="12px">
-                <img class="header_title" src="Assets/profile_header.svg" height="31px">
+                <img class="header_title" src="Assets/current_campaign.svg" height="31px">
             </div>
             <div class="workspacecontent">
                 <div class="choosecampaign">
