--- a/contribution_log.html
+++ b/contribution_log.html
@@ -40,7 +40,7 @@
             <div class="header">
                 <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br> -->
                 <img class="ham_menu" id="hamMenu" onclick="openNav()" src="Assets/ham_menu.svg" height="12px">
-                <img class="header_title" src="Assets/transaction_header.svg" height="31px">
+                <img class="header_title" src="Assets/contribution_log.svg" height="31px">
             </div>
             <div class="workspacecontent">
                 <span class="bene-light-header">Your Contribution Log</span>
