--- a/current_campaign.html
+++ b/current_campaign.html
@@ -38,7 +38,7 @@
         <div class="workspace">
             <div class="header">
                 <img class="ham_menu" id="hamMenu" onclick="openNav()" src="Assets/ham_menu.svg" height="12px" />
-                <img class="header_title" src="Assets/home_header.svg" height="31px" />
+                <img class="header_title" src="Assets/current_campaign.svg" height="31px" />
             </div>
             <div class="workspacecontent">
 
