--- a/help_page.html
+++ b/help_page.html
@@ -89,7 +89,7 @@
 
                 <div>
                     <label>DESCRIBE YOUR PROBLEM HERE</label><br>
-                    <textarea class="inputtext" type="text" class="form-control" placeholder=""
+                    <textarea class="inputtextarea" type="text" class="form-control" placeholder=""
                         name="First_Name"></textarea>
 
 
